# libplacebo

./: .gitlab-ci.yml  README.md  meson.build  meson_options.txt
src/: colorspace.c  common.h  context.c  gpu.c  gpu.h  meson.build  renderer.c  shaders.c  shaders.h  spirv.h  spirv_shaderc.c
src/include/libplacebo/: colorspace.h  context.h  dispatch.h  filters.h  gpu.h  opengl.h  renderer.h  shaders.h  swapchain.h  vulkan.h
src/include/libplacebo/shaders/: colorspace.h  custom.h
src/include/libplacebo/utils/: libav.h
src/opengl/: common.h  context.c  ra_gl.c  ra_gl.h
src/shaders/: av1.c  colorspace.c  custom.c  sampling.c
src/tests/: colorspace.c  gpu_tests.h  libav.c  opengl_x11.c  ra_tests.h  vulkan.c
src/utils/: libav.c
src/vulkan/: command.h  common.h  context.c  gpu.c  malloc.h  swapchain.c
subprojects/bstr/: format.c
